feat: add new listing page

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,29 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>havenly form</title>
-</head>
-<body>
+<% layout ("/layouts/boilerplate") %>
+<div class="row">
+<div class="col-8 offset-2">
+    <br>
     <h3> create a new listing! </h3>
+    <br>
     <form method="POST" action="/listings">
-        <label for="title" class="form-label">Title</label>
-        <input name="listing[title]" placeholder="enter title" type="text" class="form-control">
-        <br><br>
-        <textarea name="listing[description]" placeholder="enter description" type="text"></textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="enter image URL/link" type="text">
-        <br><br>
-        <input name="listing[price]" placeholder="enter price" type="number">
-        <br><br>
-        <input name="listing[country]" placeholder="enter country" type="text">
-        <br><br>
-        <input name="listing[location]" placeholder="enter location" type="text">
-        <br><br>
-        <Button> submit!</Button>
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input 
+            name="listing[title]" 
+            placeholder="enter title" 
+            type="text" 
+            class="form-control">
+        
+        </div>
 
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea 
+            name="listing[description]" 
+            class="form-control"></textarea>  
+        </div>
+
+        <div class="mb-3">
+            <label for="image" class="form-label">Image-link</label>
+            <input 
+            name="listing[image]" 
+            placeholder="enter image URL/link" 
+            type="text"
+            class="form-control">
+        </div>
+
+        <div class="row">
+            <div class="mb-3 col-md-4">
+                <label for="price" class="form-label">Price</label>
+                <input 
+                name="listing[price]" 
+                placeholder="enter price" 
+                type="number"
+                class="form-control">
+            </div>
+     
+            <div class="mb-3 col-md-8">
+                <label for="country" class="form-label">Country</label>
+                <input 
+                name="listing[country]" 
+                placeholder="enter country" 
+                type="text"
+                class="form-control">
+            </div>
+
+        </div>
+        
+
+
+        <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input 
+            name="listing[location]" 
+            placeholder="enter location" 
+            type="text"
+            class="form-control">
+        </div>
+        <br>
+        <Button class="btn btn-dark add-btn"> Add </Button>
+        <br><br>
     </form>
-    
-</body>
-</html>
+</div> 
+</div>    
