--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,12 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif;
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container{
+    flex:1;
 }
 
 /* NAVBAR */
@@ -94,4 +101,10 @@ body{
 .card-img-overlay:hover {
     opacity: 0.2;
     background-color: white;
+}
+
+/* NEW LISTING PAGE */
+.add-btn{
+    background-color: #fe424d !important;
+    border: none !important;
 }
