style: update styling of (edit listing page)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,3 +108,10 @@ body{
     background-color: #fe424d !important;
     border: none !important;
 }
+
+/* EDIT LISTING PAGE */
+
+.edit-btn {
+    background-color: #fe424d !important;
+    border: none !important;    
+}
