--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -13,7 +13,7 @@
             type="text" 
             class="form-control"
             required>
-        
+            <div class="valid-feedback"> title looks good! </div>
         </div>
 
         <div class="mb-3">
@@ -42,6 +42,7 @@
                 type="number"
                 class="form-control"
                 required>
+                <div class="invalid-feedback"> Please enter a valid Price! </div>
             </div>
      
             <div class="mb-3 col-md-8">
@@ -52,6 +53,7 @@
                 type="text"
                 class="form-control"
                 required>
+                <div class="invalid-feedback"> Please enter the country name!</div>
             </div>
 
         </div>
@@ -66,6 +68,7 @@
             type="text"
             class="form-control"
             required>
+            <div class="invalid-feedback"> Location should be valid! </div>
         </div>
         <br>
         <Button class="btn btn-dark add-btn"> Add </Button>
