--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,7 +4,7 @@
         <h3><%= listing.title %></h3>
     </div>
 
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
             <p class="card-text">
@@ -29,7 +29,7 @@
 <div class="col-8 offset-3 mb-3">
     <hr>
     <h4>leave a review</h4>
-    <form action="/listings/<%= listing._id %>/reviews" method="POST">
+    <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
         <div class="mb-3 mt-3">
             <label for="rating" class="form-label">Rating</label>
             <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
@@ -40,10 +40,27 @@
                 name="review[comment]" 
                 id="comment" 
                 cols="30" rows="5"
-                class="form-control"></textarea>
+                class="form-control"
+                required></textarea>
+                <div class="invalid-feedback">Please submit a comment for review! </div>
         </div>
         <br>
         <button class="btn btn-outline-dark"> Submit </button>
     </form>
+
+    <hr>
+    <h4>All reviews</h4>
+    <div class="row">
+    <% for (review of listing.reviews){ %>
+    <div class="card col-5 ms-3 mb-3">
+        <div class="card-body">
+            <h5 class="card-title">Robert</h5>
+            <p class="card-text"><%= review.comment %></p>
+            <p class="card-text"><%= review.rating %></p>
+        </div>
+    </div> 
+    <% } %>
+    </div>
+
 </div>
 </div>
